[package]
name = "braille-image"
version = "0.1.1"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
edge-detection = "0.2.5"
image = "0.23.12"
